--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://shoogle.us/oklahoma"
+baseURL = "https://us.shoogle.net/oklahoma"
 languageCode = "en-US"
 title = "Oklahoma"
 theme = "ln-base"
