update content and data

--- a/data/cities/atoka/walmart.yml
+++ b/data/cities/atoka/walmart.yml
@@ -1,8 +1,8 @@
-id: 5315599554
-type: node
-shop: supermarket
-latitude: 34.3662191
-longitude: -96.1426364
+id: 881456605
+type: way
+shop: department store
+latitude: 34.3665151
+longitude: -96.1422215
 postcode: "74525"
 city: Atoka
 street: "South Mississippi Avenue"
