--- a/data/cities/tulsa/walmart-supercenter-5.yml
+++ b/data/cities/tulsa/walmart-supercenter-5.yml
@@ -1,6 +1,6 @@
 id: 321204618
 type: way
-shop: supermarket
+shop: variety store
 latitude: 36.0468156
 longitude: -95.96169680000001
 postcode: "74137"
@@ -8,5 +8,5 @@ city: Tulsa
 street: "East 81st Street"
 housenumber: 2019
 phone: "+1-918-488-8791"
-opening_hours: "Mo-Su 06:00-24:00;24/7"
+opening_hours: "Mo-Su 06:00-24:00; 24/7"
 website: "https://www.walmart.com/store/992/tulsa-ok/whats-new"
