update content and data

--- a/data/cities/del-city/c-health-and-wellness-massage-and-bodyworks-llc.yml
+++ b/data/cities/del-city/c-health-and-wellness-massage-and-bodyworks-llc.yml
@@ -1,8 +1,8 @@
-id: 8241328016
-type: node
+id: 894018847
+type: way
 shop: beauty
-latitude: 35.4357613
-longitude: -97.43744290000001
+latitude: 35.435830700000004
+longitude: -97.4374676
 postcode: "73115"
 city: Del City
 street: "Epperly Drive"
