update content and data

--- a/data/cities/oklahoma-city/j-willis-auto-body.yml
+++ b/data/cities/oklahoma-city/j-willis-auto-body.yml
@@ -6,6 +6,6 @@ postcode: "73114"
 city: Oklahoma City
 street: "Northwest 122nd Street"
 housenumber: 112
-phone: ""
+phone: "+1 405 7539535"
 opening_hours: ""
-website: ""
+website: "http://jwillisautobody.com"
