--- a/data/cities/sand-springs/quiktrip.yml
+++ b/data/cities/sand-springs/quiktrip.yml
@@ -4,7 +4,7 @@ latitude: 36.135916
 longitude: -96.1162707
 postcode: "74063"
 city: Sand Springs
-street: "State Highway 97"
+street: "South Wilson Avenue"
 housenumber: 200
 phone: ""
 opening_hours: "24/7"
