--- a/data/cities/stillwater/vestige.yml
+++ b/data/cities/stillwater/vestige.yml
@@ -1,7 +1,7 @@
 id: 232549227
 type: way
-latitude: 36.1141388
-longitude: -97.059055
+latitude: 36.114217700000005
+longitude: -97.0592045
 postcode: "74074"
 city: Stillwater
 street: "South Main Street"
