--- a/data/cities/tulsa/gamestop.yml
+++ b/data/cities/tulsa/gamestop.yml
@@ -4,7 +4,7 @@ latitude: 36.024079400000005
 longitude: -95.9484719
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 9669
 phone: ""
 opening_hours: "Su 12:00-18:00; Mo-Sa 11:00-21:00"
