--- a/data/cities/tulsa/infinity-elite.yml
+++ b/data/cities/tulsa/infinity-elite.yml
@@ -4,8 +4,8 @@ latitude: 36.024150500000005
 longitude: -95.9486902
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
-housenumber: 9667-A
+street: "Riverside Parkway"
+housenumber: 9667
 phone: ""
 opening_hours: "Su 12:00-18:00; Mo-Sa 09:00-19:00"
 website: ""
