--- a/data/cities/tulsa/james-avery-jewelry.yml
+++ b/data/cities/tulsa/james-avery-jewelry.yml
@@ -4,7 +4,7 @@ latitude: 36.1029708
 longitude: -95.91803440000001
 postcode: "74135"
 city: Tulsa
-street: "South Yale Ave"
+street: "South Yale Avenue"
 housenumber: 4169
 phone: "9186277700"
 opening_hours: "Mo-Sa 10:00-21:00, Su 12:00-19:00"
