--- a/data/cities/tulsa/jiffy-lube-3.yml
+++ b/data/cities/tulsa/jiffy-lube-3.yml
@@ -1,11 +1,11 @@
-id: 556644096
+id: 227888362
 type: way
-latitude: 36.0484707
-longitude: -96.0042942
-postcode: "74132"
+latitude: 36.1477006
+longitude: -95.8516056
+postcode: "74128"
 city: Tulsa
-street: "South Olympia Avenue"
-housenumber: 7853
+street: "South Garnett Road"
+housenumber: 1102
 phone: ""
 opening_hours: ""
 website: ""
