--- a/data/cities/tulsa/la-monde-cleaners.yml
+++ b/data/cities/tulsa/la-monde-cleaners.yml
@@ -4,7 +4,7 @@ latitude: 36.023914500000004
 longitude: -95.94869100000001
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 9679
 phone: ""
 opening_hours: "Mo-Fr 07:00-19:00; Sa 09:00-13:00"
