--- a/data/cities/tulsa/quiktrip-10.yml
+++ b/data/cities/tulsa/quiktrip-10.yml
@@ -1,11 +1,11 @@
-id: 233145675
+id: 263388057
 type: way
-latitude: 36.0895947
-longitude: -95.90510780000001
+latitude: 36.1337731
+longitude: -95.94112390000001
 postcode: ""
 city: Tulsa
-street: "South Sheridan Road"
-housenumber: 5116
+street: "South Harvard Avenue"
+housenumber: 1946
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
