--- a/data/cities/tulsa/quiktrip-14.yml
+++ b/data/cities/tulsa/quiktrip-14.yml
@@ -4,7 +4,7 @@ latitude: 36.0618829
 longitude: -96.0026309
 postcode: ""
 city: Tulsa
-street: "East 71st Street"
+street: "West 71st Street"
 housenumber: 807
 phone: ""
 opening_hours: "24/7"
