--- a/data/cities/tulsa/quiktrip-2.yml
+++ b/data/cities/tulsa/quiktrip-2.yml
@@ -1,11 +1,11 @@
-id: 102036751
+id: 102361221
 type: way
-latitude: 36.0613042
-longitude: -95.97299170000001
-postcode: "74136"
+latitude: 36.018030800000005
+longitude: -95.887409
+postcode: "74133"
 city: Tulsa
-street: "East 71st Street South"
-housenumber: 1415
+street: "South Memorial Drive"
+housenumber: 10028
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
