--- a/data/cities/tulsa/quiktrip-4.yml
+++ b/data/cities/tulsa/quiktrip-4.yml
@@ -1,11 +1,11 @@
-id: 183679001
+id: 189296404
 type: way
-latitude: 36.076539700000005
-longitude: -96.04810090000001
-postcode: "74129"
+latitude: 36.0918963
+longitude: -95.9213823
+postcode: "74135"
 city: Tulsa
-street: "South 49th Avenue West"
-housenumber: 6008
+street: "South Yale Avenue"
+housenumber: 4795
 phone: ""
 opening_hours: ""
 website: ""
