--- a/data/cities/tulsa/quiktrip-5.yml
+++ b/data/cities/tulsa/quiktrip-5.yml
@@ -1,11 +1,11 @@
-id: 189296404
+id: 190326426
 type: way
-latitude: 36.0918963
-longitude: -95.9213823
-postcode: "74135"
+latitude: 36.0758303
+longitude: -95.95725630000001
+postcode: ""
 city: Tulsa
-street: "South Yale Avenue"
-housenumber: 4795
+street: "South Lewis Avenue"
+housenumber: 5955
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
