--- a/data/cities/tulsa/quiktrip-6.yml
+++ b/data/cities/tulsa/quiktrip-6.yml
@@ -1,11 +1,11 @@
-id: 190326426
+id: 220670671
 type: way
-latitude: 36.0758303
-longitude: -95.95725630000001
-postcode: ""
+latitude: 36.177738500000004
+longitude: -95.869731
+postcode: "74115"
 city: Tulsa
-street: "South Lewis Avenue"
-housenumber: 5955
+street: "East Pine Street"
+housenumber: 9621
 phone: ""
 opening_hours: "24/7"
 website: ""
