--- a/data/cities/tulsa/quiktrip-7.yml
+++ b/data/cities/tulsa/quiktrip-7.yml
@@ -1,11 +1,11 @@
-id: 220670671
+id: 224666354
 type: way
-latitude: 36.177738500000004
-longitude: -95.869731
-postcode: "74115"
+latitude: 36.1038512
+longitude: -95.851939
+postcode: "74146"
 city: Tulsa
-street: "East Pine Street"
-housenumber: 9621
+street: "South Garnett Road"
+housenumber: 4016
 phone: ""
 opening_hours: "24/7"
 website: ""
