--- a/data/cities/tulsa/quiktrip-8.yml
+++ b/data/cities/tulsa/quiktrip-8.yml
@@ -1,11 +1,11 @@
-id: 224666354
+id: 229816031
 type: way
-latitude: 36.1038512
-longitude: -95.851939
-postcode: "74146"
+latitude: 36.177838900000005
+longitude: -95.9748943
+postcode: ""
 city: Tulsa
-street: "South Garnett Road"
-housenumber: 4016
+street: "East Pine Street"
+housenumber: 1313
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
