--- a/data/cities/tulsa/quiktrip-9.yml
+++ b/data/cities/tulsa/quiktrip-9.yml
@@ -1,11 +1,11 @@
-id: 229816031
+id: 233145675
 type: way
-latitude: 36.177838900000005
-longitude: -95.9748943
+latitude: 36.0895947
+longitude: -95.90510780000001
 postcode: ""
 city: Tulsa
-street: "East Pine Street"
-housenumber: 1313
+street: "South Sheridan Road"
+housenumber: 5116
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
