--- a/data/cities/tulsa/quiktrip.yml
+++ b/data/cities/tulsa/quiktrip.yml
@@ -1,11 +1,11 @@
-id: 4549728575
-type: node
-latitude: 36.148534000000005
-longitude: -95.85023690000001
-postcode: ""
+id: 102036751
+type: way
+latitude: 36.0613042
+longitude: -95.97299170000001
+postcode: "74136"
 city: Tulsa
-street: "East 11th Street"
-housenumber: 11315
+street: "East 71st Street"
+housenumber: 1415
 phone: ""
 opening_hours: "24/7"
 website: ""
