--- a/data/cities/tulsa/spirits-on-riverside.yml
+++ b/data/cities/tulsa/spirits-on-riverside.yml
@@ -4,7 +4,7 @@ latitude: 36.0182122
 longitude: -95.94999
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 10030
 phone: ""
 opening_hours: "Mo-Sa 10:00-21:00"
