--- a/data/cities/tulsa/warehouse-market-2.yml
+++ b/data/cities/tulsa/warehouse-market-2.yml
@@ -4,7 +4,7 @@ latitude: 36.1679796
 longitude: -95.9036257
 postcode: "74115"
 city: Tulsa
-street: "Sheridan"
+street: "North Sheridan Road"
 housenumber: 845
 phone: ""
 opening_hours: ""
