--- a/data/cities/woodward/t-rex-enterprises-llc.yml
+++ b/data/cities/woodward/t-rex-enterprises-llc.yml
@@ -8,4 +8,4 @@ street: "East Hanks Trail"
 housenumber: 1522
 phone: "580 216 0958"
 opening_hours: "Mo-Sa 13:00-19:00"
-website: "www.trexenterprisesllc.com"
+website: "http://www.trexenterprisesllc.com"
