--- a/data/cities/sand-springs/walmart-supercenter.yml
+++ b/data/cities/sand-springs/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 36.1340194
 longitude: -96.12105840000001
 postcode: "74063"
 city: Sand Springs
-street: "South Highway 97"
+street: "South Wilson Avenue"
 housenumber: 220
 phone: "+1-918-245-0213"
 opening_hours: "24/7"
