--- a/data/cities/tulsa/advance-america-cash-advance.yml
+++ b/data/cities/tulsa/advance-america-cash-advance.yml
@@ -4,8 +4,8 @@ latitude: 36.0245903
 longitude: -95.94796260000001
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
-housenumber: 9645-B
+street: "Riverside Parkway"
+housenumber: 9645
 phone: ""
 opening_hours: "Mo-Th 10:00-18:00; Fr 09:00-19:00; Sa 09:00-15:00"
 website: "https://www.advanceamerica.net/"
