--- a/data/cities/tulsa/cvs-pharmacy.yml
+++ b/data/cities/tulsa/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 744425831
+id: 537840505
 type: way
-latitude: 36.1411036
-longitude: -95.9666275
-postcode: "74014"
+latitude: 36.103688600000005
+longitude: -95.9395976
+postcode: ""
 city: Tulsa
-street: "East 15th Street"
-housenumber: 1701
+street: "South Harvard Avenue"
+housenumber: 4107
 phone: ""
-opening_hours: "24/7"
+opening_hours: "Mo-Su 08:00-22:00"
 website: ""
