--- a/data/cities/tulsa/dollar-tree.yml
+++ b/data/cities/tulsa/dollar-tree.yml
@@ -4,7 +4,7 @@ latitude: 36.0262546
 longitude: -95.94753410000001
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 9591-E
 phone: ""
 opening_hours: "Su 10:00-20:00; Mo-Sa 09:00-21:00"
