--- a/data/cities/tulsa/donuts-at-riverside.yml
+++ b/data/cities/tulsa/donuts-at-riverside.yml
@@ -4,7 +4,7 @@ latitude: 36.023914500000004
 longitude: -95.9484724
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 9675
 phone: "+1-918-298-4445"
 opening_hours: "Tu-Sa 05:00-11:30; Su 05:00-11:00"
