--- a/data/cities/tulsa/kohls.yml
+++ b/data/cities/tulsa/kohls.yml
@@ -4,7 +4,7 @@ latitude: 36.0251545
 longitude: -95.94704030000001
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 9595
 phone: ""
 opening_hours: "Su 09:00-21:00; Mo-Th 09:00-23:00; Fr 09:00-23:00; Sa 08:00-23:00"
