--- a/data/cities/tulsa/kum-and-go.yml
+++ b/data/cities/tulsa/kum-and-go.yml
@@ -4,7 +4,7 @@ latitude: 36.0182122
 longitude: -95.94999
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 10010
 phone: ""
 opening_hours: "24/7"
