--- a/data/cities/tulsa/petco.yml
+++ b/data/cities/tulsa/petco.yml
@@ -4,8 +4,8 @@ latitude: 36.024308000000005
 longitude: -95.94838960000001
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
-housenumber: 9645-A
+street: "Riverside Parkway"
+housenumber: 9645
 phone: ""
 opening_hours: "Mo-Sa 09:00-21:00; Su 10:00-19:00"
 website: ""
