--- a/data/cities/tulsa/quiktrip-3.yml
+++ b/data/cities/tulsa/quiktrip-3.yml
@@ -1,11 +1,11 @@
-id: 102361221
+id: 183679001
 type: way
-latitude: 36.018030800000005
-longitude: -95.887409
-postcode: "74133"
+latitude: 36.076539700000005
+longitude: -96.04810090000001
+postcode: "74129"
 city: Tulsa
-street: "South Memorial Drive"
-housenumber: 10028
+street: "South 49th Avenue West"
+housenumber: 6008
 phone: ""
 opening_hours: ""
 website: ""
