--- a/data/cities/tulsa/shoe-carnival.yml
+++ b/data/cities/tulsa/shoe-carnival.yml
@@ -4,7 +4,7 @@ latitude: 36.0262546
 longitude: -95.94753410000001
 postcode: ""
 city: Tulsa
-street: "South Riverside Parkway"
+street: "Riverside Parkway"
 housenumber: 9591-C
 phone: ""
 opening_hours: "Su 11:00-19:00; Mo-Th 10:00-21:00; Fr, Sa 09:30-21:30"
