--- a/data/cities/tulsa/walmart-neighborhood-market-2.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market-2.yml
@@ -4,7 +4,7 @@ latitude: 36.117453000000005
 longitude: -95.93860500000001
 postcode: "74135"
 city: Tulsa
-street: "South Harvard Avenue East"
+street: "South Harvard Avenue"
 housenumber: 3139
 phone: "+1-918-984-6290"
 opening_hours: "Mo-Su 06:00-24:00"
