update content and data

--- a/data/cities/bethany/rons-tire-and-auto.yml
+++ b/data/cities/bethany/rons-tire-and-auto.yml
@@ -1,11 +1,11 @@
-id: 2122651766
-type: node
-latitude: 35.510951000000006
-longitude: -97.62614900000001
+id: 325081201
+type: way
+latitude: 35.5109433
+longitude: -97.6263682
 postcode: "73008"
 city: Bethany
-street: "NW 39th Expressway"
+street: "Northwest 39th Expressway"
 housenumber: 6416
-phone: "(405) 787-3811"
+phone: "+1 405 787 3811"
 opening_hours: ""
 website: "http://www.RonsGoodyear.com"
