--- a/data/cities/norman/aldi.yml
+++ b/data/cities/norman/aldi.yml
@@ -1,11 +1,11 @@
-id: 324067178
-type: way
-latitude: 35.2176435
-longitude: -97.4789581
-postcode: "73069"
+id: 8627347019
+type: node
+latitude: 35.1805608
+longitude: -97.4155743
+postcode: "73071"
 city: Norman
-street: "West Main Street"
-housenumber: 2440
-phone: ""
-opening_hours: "Mo-Su 09:00-21:00; PH off"
-website: "https://tinyurl.com/hbrxbyq"
+street: "Classen Boulevard"
+housenumber: 3101
+phone: "+1 844 475 1083"
+opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
+website: "https://www.aldi.us/"
