--- a/data/cities/norman/robinsons-repurposed.yml
+++ b/data/cities/norman/robinsons-repurposed.yml
@@ -6,6 +6,6 @@ postcode: "73069"
 city: Norman
 street: "East Main Street"
 housenumber: 325
-phone: "405-579-9790"
+phone: "+1 405 579 9790"
 opening_hours: ""
 website: "http://robinsonsrepurposed.com"
