--- a/data/cities/sapulpa/walmart-supercenter.yml
+++ b/data/cities/sapulpa/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 35.986808800000006
 longitude: -96.1343729
 postcode: "74066"
 city: Sapulpa
-street: "West Taft Street"
+street: "West Taft Avenue"
 housenumber: 1002
 phone: "+1-918-224-8080"
 opening_hours: "24/7"
