--- a/data/cities/stillwater/sprint-2.yml
+++ b/data/cities/stillwater/sprint-2.yml
@@ -4,7 +4,7 @@ latitude: 36.1162964
 longitude: -97.05089450000001
 postcode: "74074"
 city: Stillwater
-street: "West 6th Avenue"
+street: "East 6th Avenue"
 housenumber: 517
 phone: ""
 opening_hours: ""
