--- a/data/cities/tulsa/g-oscar-bicycles.yml
+++ b/data/cities/tulsa/g-oscar-bicycles.yml
@@ -1,7 +1,7 @@
-id: 2836178203
-type: node
-latitude: 36.1388806
-longitude: -95.98714740000001
+id: 923908316
+type: way
+latitude: 36.1389317
+longitude: -95.98699900000001
 postcode: "74119"
 city: Tulsa
 street: "South Main Street"
