--- a/data/cities/tulsa/kum-and-go-2.yml
+++ b/data/cities/tulsa/kum-and-go-2.yml
@@ -4,7 +4,7 @@ latitude: 36.0473585
 longitude: -96.005075
 postcode: "74132"
 city: Tulsa
-street: "West 81st Street South"
+street: "West 81st Street"
 housenumber: 1111
 phone: ""
 opening_hours: ""
