--- a/data/cities/tulsa/walmart-neighborhood-market-6.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market-6.yml
@@ -1,11 +1,11 @@
-id: 464837050
+id: 930814844
 type: way
-latitude: 36.027300100000005
-longitude: -95.946748
-postcode: "74137"
+latitude: 36.099631
+longitude: -95.9774041
+postcode: "74105"
 city: Tulsa
-street: "South Delaware Avenue"
-housenumber: 9411
-phone: "+1-918-299-8316"
+street: "South Peoria Avenue"
+housenumber: 4404
+phone: "+1-918-749-1577"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/2395/tulsa-ok/whats-new"
+website: "https://www.walmart.com/store/5093/tulsa-ok/whats-new"
