--- a/data/cities/tulsa/walmart-neighborhood-market.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market.yml
@@ -1,11 +1,11 @@
-id: 4621905528
+id: 5315596620
 type: node
-latitude: 36.099317
-longitude: -95.97689820000001
-postcode: "74105"
+latitude: 36.117453000000005
+longitude: -95.93860500000001
+postcode: "74135"
 city: Tulsa
-street: "South Peoria Avenue"
-housenumber: 4404
-phone: "+1-918-749-1577"
+street: "South Harvard Avenue"
+housenumber: 3139
+phone: "+1-918-984-6290"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/5093/tulsa-ok/whats-new"
+website: "https://www.walmart.com/store/6170/tulsa-ok/whats-new"
