--- a/data/cities/antlers/family-dollar.yml
+++ b/data/cities/antlers/family-dollar.yml
@@ -1,11 +1,11 @@
 id: 475732100
 type: way
-latitude: 34.229430400000005
-longitude: -95.6246919
+latitude: 34.229415700000004
+longitude: -95.6246983
 postcode: "74523"
 city: Antlers
 street: "SW C"
 housenumber: 200
-phone: "580-298-5128"
+phone: "+1 580 298 5128"
 opening_hours: "08:00-22:00"
 website: ""
