--- a/data/cities/ardmore/aldi.yml
+++ b/data/cities/ardmore/aldi.yml
@@ -1,11 +1,11 @@
 id: 865227570
 type: way
-latitude: 34.181132600000005
-longitude: -97.1424549
+latitude: 34.18112
+longitude: -97.14241700000001
 postcode: "73401"
 city: Ardmore
 street: "North Commerce Street"
 housenumber: 510
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 844 475 1021"
+opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
+website: "https://www.aldi.us/"
