--- a/data/cities/mcalester/dollar-general.yml
+++ b/data/cities/mcalester/dollar-general.yml
@@ -6,6 +6,6 @@ postcode: "74501"
 city: McAlester
 street: "South George Nigh Expressway"
 housenumber: 408
-phone: "918-420-5223"
+phone: "+1 918 420 5223"
 opening_hours: "Mo-Su 08:00-21:00"
 website: "https://www.dollargeneral.com/"
