--- a/data/cities/ponca-city/aldi.yml
+++ b/data/cities/ponca-city/aldi.yml
@@ -6,6 +6,6 @@ postcode: "74601"
 city: Ponca City
 street: "East Prospect Avenue"
 housenumber: 1000
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 833 747 5010"
+opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
+website: "https://www.aldi.us/"
