--- a/data/cities/stillwater/aldi.yml
+++ b/data/cities/stillwater/aldi.yml
@@ -1,11 +1,11 @@
 id: 241574855
 type: way
-latitude: 36.1340858
-longitude: -97.0528891
+latitude: 36.134085400000004
+longitude: -97.05286090000001
 postcode: "74075"
 city: Stillwater
 street: "North Perkins Road"
 housenumber: 1188
-phone: "855.955.2534"
-opening_hours: "09:00-21:00"
+phone: "+1 844 475 1018"
+opening_hours: "Mo 09:00-16:00, Tu-We, Fr-Su 09:00-21:00, Th 08:30-21:00"
 website: "https://www.aldi.us/"
