--- a/data/cities/stillwater/butter-bean-childrens-boutique.yml
+++ b/data/cities/stillwater/butter-bean-childrens-boutique.yml
@@ -1,11 +1,11 @@
 id: 232796785
 type: way
-latitude: 36.1165474
-longitude: -97.05847370000001
+latitude: 36.1165462
+longitude: -97.05847220000001
 postcode: "74074"
 city: Stillwater
 street: "South Main Street"
 housenumber: 505
-phone: "405-362-6001"
+phone: "+1 405 362 6001"
 opening_hours: ""
 website: ""
