--- a/data/cities/stillwater/janzen-toyota-collision-center.yml
+++ b/data/cities/stillwater/janzen-toyota-collision-center.yml
@@ -6,6 +6,6 @@ postcode: "74074"
 city: Stillwater
 street: "West 6th Avenue"
 housenumber: 4900
-phone: "866-635-4840"
+phone: "+1 866 635 4840"
 opening_hours: "Mo-Fr 08:00-17:00"
 website: "http://janzentoyota.calls.net/BodyShop.aspx"
