--- a/data/cities/stillwater/janzen-toyota.yml
+++ b/data/cities/stillwater/janzen-toyota.yml
@@ -6,6 +6,6 @@ postcode: "74074"
 city: Stillwater
 street: "West 6th Avenue"
 housenumber: 4900
-phone: "877-308-9829"
+phone: "+1 877 308 9829"
 opening_hours: "Mo-Fr 08:30-19:00; Sa 08:30-18:00"
 website: ""
