--- a/data/cities/stillwater/kim-ly-nails.yml
+++ b/data/cities/stillwater/kim-ly-nails.yml
@@ -6,6 +6,6 @@ postcode: "74074"
 city: Stillwater
 street: "South Perkins Road"
 housenumber: 
-phone: "405-372-5444"
+phone: "+1 405 372 5444"
 opening_hours: ""
 website: ""
