--- a/data/cities/stillwater/murphys.yml
+++ b/data/cities/stillwater/murphys.yml
@@ -6,6 +6,6 @@ postcode: "74074"
 city: Stillwater
 street: "South Main Street"
 housenumber: 815
-phone: "405-372-0468"
-opening_hours: "Mo-We 10:00-19:00;Th 10:00-20:00;Fr 10:00-19:00;Sa 10:00-18:00;Su 13:00-17:00"
+phone: "+1 405 372 0468"
+opening_hours: "Mo-We 10:00-19:00; Th 10:00-20:00; Fr 10:00-19:00; Sa 10:00-18:00; Su 13:00-17:00"
 website: "http://murphysdeptstore.com"
