--- a/data/cities/stillwater/nook-and-cranny.yml
+++ b/data/cities/stillwater/nook-and-cranny.yml
@@ -4,7 +4,7 @@ latitude: 36.111125300000005
 longitude: -97.05878440000001
 postcode: "74074"
 city: Stillwater
-street: "south Main Street"
+street: "South Main Street"
 housenumber: 1002
 phone: "405-385-1747"
 opening_hours: ""
