--- a/data/cities/tulsa/car-city-auto-finance.yml
+++ b/data/cities/tulsa/car-city-auto-finance.yml
@@ -1,11 +1,11 @@
 id: 323859986
 type: way
-latitude: 36.1160371
-longitude: -95.92282680000001
+latitude: 36.1160312
+longitude: -95.9228221
 postcode: "74135"
 city: Tulsa
 street: "South Yale Avenue"
 housenumber: 3252
-phone: "918-895-8778"
+phone: "+1 918 895 8778"
 opening_hours: ""
 website: "http://www.carcityautofinance.com/"
