--- a/data/cities/tulsa/fifteenth-street-wine-and-spirit.yml
+++ b/data/cities/tulsa/fifteenth-street-wine-and-spirit.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East 15th Street"
 housenumber: 1522
 phone: ""
-opening_hours: "Mo-Th 09:30-10:00+; Fr,Sa 09:30-10:30+; Su 12:00-18:00"
+opening_hours: "Mo-Th 09:30-22:00; Fr, Sa 09:30-22:30; Su 12:00-18:00"
 website: ""
