--- a/data/cities/tulsa/walmart-neighborhood-market-2.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market-2.yml
@@ -1,11 +1,11 @@
-id: 5315596620
+id: 5315598991
 type: node
-latitude: 36.117453000000005
-longitude: -95.93860500000001
-postcode: "74135"
+latitude: 36.044977
+longitude: -95.90317200000001
+postcode: "74133"
 city: Tulsa
-street: "South Harvard Avenue"
-housenumber: 3139
-phone: "+1-918-984-6290"
+street: "East 81st Street"
+housenumber: 6606
+phone: "+1-918-524-1435"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/6170/tulsa-ok/whats-new"
+website: "https://www.walmart.com/store/2880/tulsa-ok/whats-new"
