--- a/data/cities/tulsa/walmart-neighborhood-market-4.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market-4.yml
@@ -1,11 +1,11 @@
-id: 5315598991
-type: node
-latitude: 36.044977
-longitude: -95.90317200000001
-postcode: "74133"
+id: 464837050
+type: way
+latitude: 36.027300100000005
+longitude: -95.946748
+postcode: "74137"
 city: Tulsa
-street: "East 81st Street"
-housenumber: 6606
-phone: "+1-918-524-1435"
+street: "South Delaware Avenue"
+housenumber: 9411
+phone: "+1-918-299-8316"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/2880/tulsa-ok/whats-new"
+website: "https://www.walmart.com/store/2395/tulsa-ok/whats-new"
