--- a/data/cities/tulsa/walmart-neighborhood-market-5.yml
+++ b/data/cities/tulsa/walmart-neighborhood-market-5.yml
@@ -1,11 +1,11 @@
-id: 321408650
+id: 917607484
 type: way
-latitude: 36.131596800000004
-longitude: -95.92416300000001
-postcode: "74114"
+latitude: 36.11856
+longitude: -95.8539332
+postcode: "74146"
 city: Tulsa
-street: "East 21st Street"
-housenumber: 4720
-phone: "+1-918-392-7020"
+street: "South Garnett Road"
+housenumber: 3116
+phone: "+1-918-622-7797"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/3340/tulsa-ok/whats-new"
+website: "https://www.walmart.com/store/3457/tulsa-ok/whats-new"
