update content and data

--- a/data/cities/stillwater/aldi.yml
+++ b/data/cities/stillwater/aldi.yml
@@ -7,5 +7,5 @@ city: Stillwater
 street: "North Perkins Road"
 housenumber: 1188
 phone: "+1 844 475 1018"
-opening_hours: "Mo 09:00-16:00, Tu-We, Fr-Su 09:00-21:00, Th 08:30-21:00"
+opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
 website: "https://www.aldi.us/"
