--- a/data/cities/tulsa/keyport-self-storage.yml
+++ b/data/cities/tulsa/keyport-self-storage.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Memorial Drive"
 housenumber: 217
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-18:00"
 website: ""
