--- a/data/cities/tulsa/the-boxyard.yml
+++ b/data/cities/tulsa/the-boxyard.yml
@@ -1,11 +1,11 @@
-id: 8222312465
-type: node
-latitude: 36.1553638
-longitude: -95.9849727
+id: 211870771
+type: way
+latitude: 36.1554354
+longitude: -95.98501080000001
 postcode: "74120"
 city: Tulsa
 street: "East 3rd Street"
 housenumber: 502
 phone: ""
 opening_hours: ""
-website: "https://stemcelltulsa.com/"
+website: "http://www.tulsaboxyard.com/"
