update content and data

--- a/data/cities/arcadia/pops.yml
+++ b/data/cities/arcadia/pops.yml
@@ -1,11 +1,11 @@
 id: 290282961
 type: way
-latitude: 35.6580012
-longitude: -97.3356691
+latitude: 35.6580189
+longitude: -97.33569410000001
 postcode: "73001"
 city: Arcadia
 street: "Highway 66"
 housenumber: 660
 phone: ""
-opening_hours: "Mo-Fr 10:30-21:00; Sa,Su 07:00-21:00"
+opening_hours: "Mo-Su 06:00-22:00"
 website: "http://www.pops66.com/"
