--- a/data/cities/guthrie/recollections-antiques-mall.yml
+++ b/data/cities/guthrie/recollections-antiques-mall.yml
@@ -1,7 +1,7 @@
 id: 192379545
 type: way
-latitude: 35.8787777
-longitude: -97.4261247
+latitude: 35.8787863
+longitude: -97.426153
 postcode: "73044"
 city: Guthrie
 street: "North 1st Street"
