--- a/data/cities/guthrie/terrys-gun-and-pawn.yml
+++ b/data/cities/guthrie/terrys-gun-and-pawn.yml
@@ -1,7 +1,7 @@
 id: 192441167
 type: way
-latitude: 35.8787407
-longitude: -97.425819
+latitude: 35.878763500000005
+longitude: -97.4258405
 postcode: "73044"
 city: Guthrie
 street: "West Cleveland Avenue"
