--- a/data/cities/guthrie/treasures-and-books.yml
+++ b/data/cities/guthrie/treasures-and-books.yml
@@ -1,7 +1,7 @@
 id: 192444807
 type: way
-latitude: 35.8779187
-longitude: -97.4256723
+latitude: 35.877942600000004
+longitude: -97.425683
 postcode: "73044"
 city: Guthrie
 street: "West Oklahoma Avenue"
