--- a/data/cities/norman/q1-massage.yml
+++ b/data/cities/norman/q1-massage.yml
@@ -3,7 +3,7 @@ type: node
 latitude: 35.216736100000006
 longitude: -97.42484110000001
 postcode: "73071"
-city: Norman, OK
+city: Norman
 street: "1000 Alameda, Ste 138A,"
 housenumber: 
 phone: "(405) 757-2115"
