--- a/data/cities/stillwater/the-book-nook.yml
+++ b/data/cities/stillwater/the-book-nook.yml
@@ -3,7 +3,7 @@ type: way
 latitude: 36.1100344
 longitude: -97.05839970000001
 postcode: "74074"
-city: Stillwater, OK
+city: Stillwater
 street: "South Main Street"
 housenumber: 1101
 phone: ""
