--- a/data/cities/guthrie/cherokee-joes.yml
+++ b/data/cities/guthrie/cherokee-joes.yml
@@ -1,7 +1,7 @@
 id: 195222455
 type: way
-latitude: 35.878143
-longitude: -97.42600580000001
+latitude: 35.878163900000004
+longitude: -97.4260065
 postcode: "73044"
 city: Guthrie
 street: "West Oklahoma Avenue"
