--- a/data/cities/sand-springs/aldi.yml
+++ b/data/cities/sand-springs/aldi.yml
@@ -1,7 +1,7 @@
-id: 8627264775
-type: node
-latitude: 36.1358569
-longitude: -96.1129602
+id: 872692882
+type: way
+latitude: 36.1356473
+longitude: -96.1132967
 postcode: "74063"
 city: Sand Springs
 street: "West Alexander Boulevard"
