--- a/data/cities/stillwater/used-books.yml
+++ b/data/cities/stillwater/used-books.yml
@@ -3,7 +3,7 @@ type: way
 latitude: 36.1096148
 longitude: -97.05887720000001
 postcode: "74074"
-city: Stillwater, OK
+city: Stillwater
 street: "South Main Street"
 housenumber: 1116
 phone: ""
