update content and data

--- a/data/cities/durant/orschelin-farm-and-home.yml
+++ b/data/cities/durant/orschelin-farm-and-home.yml
@@ -1,7 +1,7 @@
 id: 607992183
 type: way
-latitude: 34.0011183
-longitude: -96.40753810000001
+latitude: 34.001125
+longitude: -96.407573
 postcode: "74701"
 city: Durant
 street: "West Main Street"
