--- a/data/cities/tulsa/quiktrip-18.yml
+++ b/data/cities/tulsa/quiktrip-18.yml
@@ -1,11 +1,11 @@
-id: 965940814
+id: 965940813
 type: way
-latitude: 36.2204156
-longitude: -95.9579324
+latitude: 36.220399
+longitude: -95.95762110000001
 postcode: "74110"
 city: Tulsa
 street: "North Lewis Avenue"
 housenumber: 4545
 phone: "+1 918 425 1896"
 opening_hours: ""
-website: "https://www.quiktrip.com"
+website: ""
