update content and data

--- a/data/cities/sand-springs/quiktrip.yml
+++ b/data/cities/sand-springs/quiktrip.yml
@@ -6,6 +6,6 @@ postcode: "74063"
 city: Sand Springs
 street: "South Wilson Avenue"
 housenumber: 200
-phone: ""
+phone: "(918) 245-9249"
 opening_hours: "24/7"
-website: ""
+website: "https://www.quiktrip.com/"
