--- a/data/cities/tulsa/synergy-motorworks.yml
+++ b/data/cities/tulsa/synergy-motorworks.yml
@@ -1,7 +1,7 @@
-id: 6051749884
-type: node
-latitude: 36.103975500000004
-longitude: -95.90075540000001
+id: 882827397
+type: way
+latitude: 36.1040335
+longitude: -95.90115940000001
 postcode: "74145"
 city: Tulsa
 street: "East 41st Street"
