--- a/data/cities/oklahoma-city/big-boys-guns-ammo-and-range.yml
+++ b/data/cities/oklahoma-city/big-boys-guns-ammo-and-range.yml
@@ -8,4 +8,4 @@ street: "Southwest 74th Street"
 housenumber: 8620
 phone: "4057457179"
 opening_hours: ""
-website: "bigboysgunsandammo.com"
+website: "https://bigboysgunsandammo.com/"
