update content and data

--- a/data/cities/coweta/dollar-general.yml
+++ b/data/cities/coweta/dollar-general.yml
@@ -1,7 +1,7 @@
 id: 951705274
 type: way
-latitude: 35.965131
-longitude: -95.65509780000001
+latitude: 35.9651353
+longitude: -95.65513
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
