--- a/data/cities/chelsea/dollar-general.yml
+++ b/data/cities/chelsea/dollar-general.yml
@@ -4,7 +4,7 @@ latitude: 36.5256
 longitude: -95.43603
 postcode: "74016"
 city: Chelsea
-street: "Admiral Joe "Jocko" Clark Trailways"
+street: "Admiral Joe 'Jocko' Clark Trailways"
 housenumber: 
 phone: ""
 opening_hours: ""
