--- a/data/cities/broken-arrow/walmart-neighborhood-market-3.yml
+++ b/data/cities/broken-arrow/walmart-neighborhood-market-3.yml
@@ -1,11 +1,11 @@
-id: 474206207
+id: 1016647412
 type: way
-latitude: 36.07658
-longitude: -95.77614
+latitude: 36.04532
+longitude: -95.84956
 postcode: "74012"
 city: Broken Arrow
-street: "East Albany Street"
-housenumber: 1300
-phone: "+1-918-505-6247"
+street: "West Houston Street"
+housenumber: 4851
+phone: "+1-918-505-6090"
 opening_hours: "Mo-Su 06:00-24:00"
-website: "https://www.walmart.com/store/4655/broken-arrow-ok/whats-new"
+website: "https://www.walmart.com/store/6942/broken-arrow-ok/whats-new"
