update content and data

--- a/data/cities/broken-bow/h-g-jewelry.yml
+++ b/data/cities/broken-bow/h-g-jewelry.yml
@@ -8,4 +8,4 @@ street: "North Broadway Street"
 housenumber: 24
 phone: ""
 opening_hours: ""
-website: "http://www.hgjewelry.com"
+website: "https://hgjewelry.com/"
