--- a/data/cities/checotah/walmart-supercenter.yml
+++ b/data/cities/checotah/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315598317
-type: node
-latitude: 35.47003
-longitude: -95.53434
+id: 1020879669
+type: way
+latitude: 35.47071
+longitude: -95.53467
 postcode: "74426"
 city: Checotah
 street: "Paul Carr Drive"
