update content and data

--- a/data/cities/moore/walmart-garden-center.yml
+++ b/data/cities/moore/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 463199582
-type: way
-latitude: 35.32317
-longitude: -97.49395
+id: 9434088962
+type: node
+latitude: 35.32214
+longitude: -97.49212
 postcode: "73160"
 city: Moore
 street: "Southwest 19th Street"
