--- a/data/cities/oklahoma-city/walmart-garden-center.yml
+++ b/data/cities/oklahoma-city/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 497278793
-type: way
-latitude: 35.38956
-longitude: -97.51137
+id: 9434071689
+type: node
+latitude: 35.38924
+longitude: -97.51163
 postcode: "73149"
 city: Oklahoma City
 street: "East Interstate 240 Service Road"
