update content and data

--- a/data/cities/arnett/r-and-r-grocery.yml
+++ b/data/cities/arnett/r-and-r-grocery.yml
@@ -4,7 +4,7 @@ latitude: 36.13421
 longitude: -99.77238
 postcode: ""
 city: Arnett
-street: "S Main Street"
+street: "South Main Street"
 housenumber: 120
 phone: "(580) 885-7411"
 opening_hours: ""
