--- a/data/cities/okeene/liquor-depot.yml
+++ b/data/cities/okeene/liquor-depot.yml
@@ -4,7 +4,7 @@ latitude: 36.11638
 longitude: -98.31352
 postcode: "73763"
 city: Okeene
-street: "East Oklahoma"
+street: "East Oklahoma Avenue"
 housenumber: 322
 phone: ""
 opening_hours: ""
