--- a/data/cities/owasso/ashley-homestore.yml
+++ b/data/cities/owasso/ashley-homestore.yml
@@ -4,7 +4,7 @@ latitude: 36.28993
 longitude: -95.84358
 postcode: "74055"
 city: Owasso
-street: "121st East Avenue North"
+street: "North 121st East Avenue"
 housenumber: 9018
 phone: ""
 opening_hours: "Mo-Sa 10:00-21:00;Su 11:00-19:00"
