--- a/data/cities/pryor-creek/braums.yml
+++ b/data/cities/pryor-creek/braums.yml
@@ -4,7 +4,7 @@ latitude: 36.26449
 longitude: -95.33217
 postcode: "74361"
 city: Pryor Creek
-street: "Steve Barry Blvd"
+street: "Steve Barry Boulevard"
 housenumber: 101
 phone: ""
 opening_hours: ""
