--- a/data/cities/pryor-creek/u-s-cellular-authorized-agent.yml
+++ b/data/cities/pryor-creek/u-s-cellular-authorized-agent.yml
@@ -4,7 +4,7 @@ latitude: 36.26441
 longitude: -95.33067
 postcode: "74361"
 city: Pryor Creek
-street: "Steve Barry Blvd"
+street: "Steve Berry Boulevard"
 housenumber: 113
 phone: ""
 opening_hours: ""
