--- a/data/cities/pryor-creek/gamestop.yml
+++ b/data/cities/pryor-creek/gamestop.yml
@@ -4,7 +4,7 @@ latitude: 36.26432
 longitude: -95.33055
 postcode: "74361"
 city: Pryor Creek
-street: "Steve Barry Blvd"
+street: "Steve Berry Boulevard"
 housenumber: 149
 phone: ""
 opening_hours: ""
