--- a/data/cities/pryor-creek/russell-cellular-verizon.yml
+++ b/data/cities/pryor-creek/russell-cellular-verizon.yml
@@ -4,7 +4,7 @@ latitude: 36.26404
 longitude: -95.33043
 postcode: "74361"
 city: Pryor Creek
-street: "Steve Berry Blvd"
+street: "Steve Berry Boulevard"
 housenumber: 125
 phone: ""
 opening_hours: ""
