--- a/data/cities/pryor/walmart-supercenter.yml
+++ b/data/cities/pryor/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 36.26174
 longitude: -95.32936
 postcode: "74361"
 city: Pryor
-street: "S Mill Street"
+street: "South Mill Street"
 housenumber: 4901
 phone: "+1-918-825-6000"
 opening_hours: "24/7"
