--- a/data/cities/watonga/true-value.yml
+++ b/data/cities/watonga/true-value.yml
@@ -4,7 +4,7 @@ latitude: 35.84487
 longitude: -98.41497
 postcode: ""
 city: Watonga
-street: "Main Street"
+street: "West Main Street"
 housenumber: 206
 phone: ""
 opening_hours: ""
