update content and data

--- a/data/cities/eufaula/l-a-tire-shop.yml
+++ b/data/cities/eufaula/l-a-tire-shop.yml
@@ -1,7 +1,7 @@
-id: 7117603686
-type: node
-latitude: 35.2844
-longitude: -95.5821
+id: 1025081090
+type: way
+latitude: 35.28432
+longitude: -95.58222
 postcode: "74432"
 city: Eufaula
 street: "South Main Street"
