--- a/data/cities/eufaula/family-dollar.yml
+++ b/data/cities/eufaula/family-dollar.yml
@@ -1,7 +1,7 @@
-id: 7115029433
-type: node
-latitude: 35.28802
-longitude: -95.58326
+id: 1024749416
+type: way
+latitude: 35.28815
+longitude: -95.58341
 postcode: "74432"
 city: Eufaula
 street: "North 1st Street"
