--- a/data/cities/eufaula/top-value.yml
+++ b/data/cities/eufaula/top-value.yml
@@ -1,7 +1,7 @@
-id: 7115029431
-type: node
-latitude: 35.283
-longitude: -95.5832
+id: 1025081085
+type: way
+latitude: 35.28319
+longitude: -95.58303
 postcode: "74432"
 city: Eufaula
 street: "South Main Street"
