update content and data

--- a/data/cities/davis/arbuckle-mountains-fried-pies.yml
+++ b/data/cities/davis/arbuckle-mountains-fried-pies.yml
@@ -1,7 +1,7 @@
-id: 5381593280
-type: node
-latitude: 34.44789
-longitude: -97.13483
+id: 558086905
+type: way
+latitude: 34.44808
+longitude: -97.1349
 postcode: "73030"
 city: Davis
 street: "US-77"
