update content and data

--- a/data/cities/catoosa/walmart-garden-center.yml
+++ b/data/cities/catoosa/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 692260278
-type: way
-latitude: 36.1657
-longitude: -95.75693
+id: 9496174376
+type: node
+latitude: 36.16511
+longitude: -95.7554
 postcode: "74015"
 city: Catoosa
 street: "Robson Road"
