--- a/data/cities/eufaula/braums.yml
+++ b/data/cities/eufaula/braums.yml
@@ -1,7 +1,7 @@
-id: 4829305618
-type: node
-latitude: 35.27881
-longitude: -95.58275
+id: 1030833632
+type: way
+latitude: 35.27886
+longitude: -95.58285
 postcode: "74432"
 city: Eufaula
 street: "Lakeshore Drive"
