--- a/data/cities/lawton/walmart-garden-center.yml
+++ b/data/cities/lawton/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 480687502
-type: way
-latitude: 34.63213
-longitude: -98.47215
+id: 9495843810
+type: node
+latitude: 34.63169
+longitude: -98.47188
 postcode: "73505"
 city: Lawton
 street: "Northwest Quannah Parker Trl"
