--- a/data/cities/eufaula/eufaula-true-value-hardware.yml
+++ b/data/cities/eufaula/eufaula-true-value-hardware.yml
@@ -1,7 +1,7 @@
-id: 7064026228
-type: node
-latitude: 35.27914
-longitude: -95.58258
+id: 1030833639
+type: way
+latitude: 35.27938
+longitude: -95.58271
 postcode: "74432"
 city: Eufaula
 street: "South Main Street"
