update content and data

--- a/data/cities/broken-bow/truckin-good-bbq.yml
+++ b/data/cities/broken-bow/truckin-good-bbq.yml
@@ -7,5 +7,5 @@ city: Broken Bow
 street: "N Hwy 259"
 housenumber: 21712
 phone: "580-884-0211"
-opening_hours: ""
+opening_hours: "Mo-Su 06:00-20:00"
 website: ""
