--- a/data/cities/coweta/used-thrift-store.yml
+++ b/data/cities/coweta/used-thrift-store.yml
@@ -1,7 +1,7 @@
-id: 977541102
-type: way
-latitude: 35.96869
-longitude: -95.65777
+id: 9529902754
+type: node
+latitude: 35.96367
+longitude: -95.65171
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
