--- a/data/cities/davis/bedre-fine-chocolate.yml
+++ b/data/cities/davis/bedre-fine-chocolate.yml
@@ -8,4 +8,4 @@ street: "North Colbert Road"
 housenumber: 37
 phone: ""
 opening_hours: ""
-website: "http://www.bedrechocolates.com/"
+website: "https://www.bedrechocolates.com/"
