--- a/data/cities/tishomingo/spa-211.yml
+++ b/data/cities/tishomingo/spa-211.yml
@@ -8,4 +8,4 @@ street: "West Main Street"
 housenumber: 211
 phone: ""
 opening_hours: ""
-website: "http://www.spa211.com/"
+website: "https://spa211.com/"
