--- a/data/cities/coweta/okie-girls-hair-company.yml
+++ b/data/cities/coweta/okie-girls-hair-company.yml
@@ -1,7 +1,7 @@
-id: 977541102
-type: way
-latitude: 35.96869
-longitude: -95.65777
+id: 8809049385
+type: node
+latitude: 35.96369
+longitude: -95.65195
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
