--- a/data/cities/coweta/the-denture-center.yml
+++ b/data/cities/coweta/the-denture-center.yml
@@ -1,11 +1,11 @@
-id: 977541102
-type: way
-latitude: 35.96869
-longitude: -95.65777
+id: 9529902752
+type: node
+latitude: 35.96313
+longitude: -95.6516
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 
-phone: ""
+phone: "+1 918 369 6959"
 opening_hours: ""
 website: ""
