--- a/data/cities/tulsa/bodega-boyz.yml
+++ b/data/cities/tulsa/bodega-boyz.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "North Lewis Avenue"
 housenumber: 1548
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-21:00; Su 11:00-17:00"
 website: ""
