--- a/data/cities/tulsa/walmart-supercenter-4.yml
+++ b/data/cities/tulsa/walmart-supercenter-4.yml
@@ -1,11 +1,11 @@
-id: 287708083
+id: 321204618
 type: way
-latitude: 36.00538
-longitude: -95.88913
-postcode: "74133"
+latitude: 36.04682
+longitude: -95.9617
+postcode: "74137"
 city: Tulsa
-street: "South Memorial Drive"
-housenumber: 10938
-phone: "+1-918-394-4000"
-opening_hours: "24/7"
-website: "https://www.walmart.com/store/1597/tulsa-ok/whats-new"
+street: "East 81st Street"
+housenumber: 2019
+phone: "+1-918-488-8791"
+opening_hours: "Mo-Su 06:00-24:00; 24/7"
+website: "https://www.walmart.com/store/992/tulsa-ok/whats-new"
