--- a/data/cities/medicine-park/basecamp-adventure-outfitters.yml
+++ b/data/cities/medicine-park/basecamp-adventure-outfitters.yml
@@ -6,6 +6,6 @@ postcode: "73557"
 city: Medicine Park
 street: "East Lake Drive"
 housenumber: 206
-phone: ""
+phone: "+1-401-308-5553"
 opening_hours: ""
-website: ""
+website: "http://www.basecampao.com/"
