update content and data

--- a/data/cities/guthrie/john-vance-auto-group-2.yml
+++ b/data/cities/guthrie/john-vance-auto-group-2.yml
@@ -4,7 +4,7 @@ latitude: 35.82426
 longitude: -97.41855
 postcode: "73044"
 city: Guthrie
-street: "S. Division St."
+street: "South Division Street"
 housenumber: 5302
 phone: ""
 opening_hours: ""
