--- a/data/cities/guthrie/hirzel-automotive.yml
+++ b/data/cities/guthrie/hirzel-automotive.yml
@@ -4,7 +4,7 @@ latitude: 35.85453
 longitude: -97.42512
 postcode: "73044"
 city: Guthrie
-street: "South Division Road"
+street: "South Division Street"
 housenumber: 2320
 phone: ""
 opening_hours: ""
