--- a/data/cities/guthrie/hometown-rental-and-feed.yml
+++ b/data/cities/guthrie/hometown-rental-and-feed.yml
@@ -4,7 +4,7 @@ latitude: 35.85475
 longitude: -97.42493
 postcode: "73044"
 city: Guthrie
-street: "South Division Road"
+street: "South Division Street"
 housenumber: 2302
 phone: ""
 opening_hours: ""
