--- a/data/cities/guthrie/ohc-supply.yml
+++ b/data/cities/guthrie/ohc-supply.yml
@@ -4,7 +4,7 @@ latitude: 35.8237
 longitude: -97.42311
 postcode: "73044"
 city: Guthrie
-street: "South Division Road"
+street: "South Division Street"
 housenumber: 5103
 phone: "+1-405-260-7625"
 opening_hours: ""
