--- a/data/cities/tulsa/fedex-office-2.yml
+++ b/data/cities/tulsa/fedex-office-2.yml
@@ -1,11 +1,11 @@
-id: 2031118833
-type: node
-latitude: 36.06043
-longitude: -95.85418
-postcode: "74133"
+id: 180140323
+type: way
+latitude: 36.06033
+longitude: -95.97501
+postcode: "74136"
 city: Tulsa
-street: "East 71st Street South"
-housenumber: 10912
+street: "East 71st Street"
+housenumber: 1324
 phone: ""
-opening_hours: "Mo-Fr 07:30-21:00; Sa 10:00-18:00; Su 12:00-18:00"
+opening_hours: ""
 website: ""
