--- a/data/cities/tulsa/fedex-office-3.yml
+++ b/data/cities/tulsa/fedex-office-3.yml
@@ -1,11 +1,11 @@
-id: 180140323
+id: 180520627
 type: way
-latitude: 36.06033
-longitude: -95.97501
-postcode: "74136"
+latitude: 36.10487
+longitude: -95.92349
+postcode: "74135"
 city: Tulsa
-street: "East 71st Street"
-housenumber: 1324
+street: "South Yale Avenue"
+housenumber: 4041
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 07:00-23:00; Sa,Su 09:00-21:00"
 website: ""
