--- a/data/cities/tulsa/fedex-office-4.yml
+++ b/data/cities/tulsa/fedex-office-4.yml
@@ -1,11 +1,11 @@
-id: 180520627
+id: 185737984
 type: way
-latitude: 36.10487
-longitude: -95.92349
-postcode: "74135"
+latitude: 36.14736
+longitude: -95.94807
+postcode: "74104"
 city: Tulsa
-street: "South Yale Avenue"
-housenumber: 4041
+street: "East 11th Street"
+housenumber: 2828
 phone: ""
-opening_hours: "Mo-Fr 07:00-23:00; Sa,Su 09:00-21:00"
+opening_hours: "Mo-Fr 07:00-23:00; Sa,Su 08:00-21:00"
 website: ""
