--- a/data/cities/tulsa/fedex-office.yml
+++ b/data/cities/tulsa/fedex-office.yml
@@ -1,11 +1,11 @@
-id: 1246438464
+id: 2031118833
 type: node
-latitude: 36.07409
-longitude: -95.88591
-postcode: ""
+latitude: 36.06043
+longitude: -95.85418
+postcode: "74133"
 city: Tulsa
-street: "East 61st Street"
-housenumber: 8228
+street: "East 71st Street South"
+housenumber: 10912
 phone: ""
-opening_hours: "24/7"
+opening_hours: "Mo-Fr 07:30-21:00; Sa 10:00-18:00; Su 12:00-18:00"
 website: ""
