update content and data

--- a/data/cities/moore/boujee-smoke-shop.yml
+++ b/data/cities/moore/boujee-smoke-shop.yml
@@ -7,5 +7,5 @@ city: Moore
 street: "Southwest 19th Street"
 housenumber: 1009
 phone: "405-676-8824"
-opening_hours: "Mon - Wed : 9:00AM to 9:00PM, Thu - Sat : 9:00AM to 11:00PM, Sun : 10:00AM to 9:00PM"
+opening_hours: "Mo-We 09:00-21:00; Th-Sa 09:00-23:00; Su 10:00-21:00"
 website: "https://boujeesmokeshop.com"
