--- a/data/cities/norman/walmart-neighborhood-market-2.yml
+++ b/data/cities/norman/walmart-neighborhood-market-2.yml
@@ -1,7 +1,7 @@
-id: 5315596682
-type: node
-latitude: 35.24841
-longitude: -97.49328
+id: 380674601
+type: way
+latitude: 35.24859
+longitude: -97.4937
 postcode: "73069"
 city: Norman
 street: "West Rock Creek Road"
