--- a/data/cities/muskogee/motor-sports-of-muskogee.yml
+++ b/data/cities/muskogee/motor-sports-of-muskogee.yml
@@ -4,8 +4,8 @@ latitude: 35.7476
 longitude: -95.31146
 postcode: "74403"
 city: Muskogee
-street: "701 N 41st St E"
-housenumber: 
+street: "N 41st St E"
+housenumber: 701
 phone: "918-687-1343"
 opening_hours: "Tu-Fr 09:00-17:00, Sa 09:00-15:00"
 website: "http://motorsportsmuskogee.com"
