--- a/data/cities/oklahoma-city/winco-foods.yml
+++ b/data/cities/oklahoma-city/winco-foods.yml
@@ -7,5 +7,5 @@ city: Oklahoma City
 street: "Northwest 39th Street"
 housenumber: 3535
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
