--- a/data/cities/guthrie/missys-donut-and-bakery.yml
+++ b/data/cities/guthrie/missys-donut-and-bakery.yml
@@ -4,7 +4,7 @@ latitude: 35.88879
 longitude: -97.42374
 postcode: "73044"
 city: Guthrie
-street: "N Wentz"
+street: "North Wentz Street"
 housenumber: 1112
 phone: ""
 opening_hours: ""
