update content and data

--- a/data/cities/norman/verizon.yml
+++ b/data/cities/norman/verizon.yml
@@ -1,11 +1,11 @@
-id: 4318525773
-type: node
-latitude: 35.23595
-longitude: -97.48142
+id: 324090881
+type: way
+latitude: 35.21887
+longitude: -97.46876
 postcode: "73069"
 city: Norman
-street: "24th Avenue Northwest"
-housenumber: 1441
+street: "West Main Street"
+housenumber: 1805
 phone: ""
 opening_hours: ""
 website: ""
