--- a/data/cities/oklahoma-city/life-storage-oklahoma-city.yml
+++ b/data/cities/oklahoma-city/life-storage-oklahoma-city.yml
@@ -6,6 +6,6 @@ postcode: "73107"
 city: Oklahoma City
 street: "N Villa Ave"
 housenumber: 3000
-phone: "405-602-5300"
-opening_hours: "Mo-Fr 09:30 - 16:00,Sa 08:30 -17:00, Su 10:00 - 16:00"
-website: "https://www.lifestorage.com/storage-units/oklahoma/oklahoma-city/73107/8056-near-shepherd-historic-district/"
+phone: ""
+opening_hours: "Mo-Fr 09:30-16:00; Sa 08:30-17:00; Su 10:00 -16:00"
+website: ""
