update content and data

--- a/data/cities/tulsa/academy-sports-outdoors.yml
+++ b/data/cities/tulsa/academy-sports-outdoors.yml
@@ -2,7 +2,7 @@ id: 120486342
 type: way
 latitude: 36.04903
 longitude: -95.85571
-postcode: ""
+postcode: "74133"
 city: Tulsa
 street: "South 107th East Avenue"
 housenumber: 7850
