--- a/data/cities/tulsa/infinity-nails-and-spa.yml
+++ b/data/cities/tulsa/infinity-nails-and-spa.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "Riverside Pkwy"
 housenumber: 9667
 phone: "918-298-4521"
-opening_hours: "Mon - Sat : 9:00AM to 7:00PM, Sun : 11:30AM to 6:00PM"
+opening_hours: "Mo-Sa 09:00-19:00, Su 11:30-18:00"
 website: "https://infinitynailstulsa.com"
