--- a/data/cities/tulsa/quiktrip-13.yml
+++ b/data/cities/tulsa/quiktrip-13.yml
@@ -1,11 +1,11 @@
-id: 449094562
+id: 411184609
 type: way
-latitude: 36.06188
-longitude: -96.00263
-postcode: ""
+latitude: 36.16135
+longitude: -95.76263
+postcode: "74108"
 city: Tulsa
-street: "West 71st Street"
-housenumber: 807
+street: "North 193rd East Avenue"
+housenumber: 18
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
