--- a/data/cities/tulsa/quiktrip-14.yml
+++ b/data/cities/tulsa/quiktrip-14.yml
@@ -1,11 +1,11 @@
-id: 560594779
+id: 449094562
 type: way
-latitude: 36.07483
-longitude: -95.89223
+latitude: 36.06188
+longitude: -96.00263
 postcode: ""
 city: Tulsa
-street: "East 61st Street"
-housenumber: 7520
+street: "West 71st Street"
+housenumber: 807
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
