--- a/data/cities/tulsa/quiktrip-15.yml
+++ b/data/cities/tulsa/quiktrip-15.yml
@@ -1,11 +1,11 @@
-id: 624562122
+id: 560594779
 type: way
-latitude: 36.12914
-longitude: -96.00626
-postcode: "74107"
+latitude: 36.07483
+longitude: -95.89223
+postcode: ""
 city: Tulsa
-street: "West 23rd Street"
-housenumber: 1202
+street: "East 61st Street"
+housenumber: 7520
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
