--- a/data/cities/tulsa/quiktrip-16.yml
+++ b/data/cities/tulsa/quiktrip-16.yml
@@ -1,11 +1,11 @@
-id: 742371764
+id: 624562122
 type: way
-latitude: 36.16013
-longitude: -95.88752
-postcode: ""
+latitude: 36.12914
+longitude: -96.00626
+postcode: "74107"
 city: Tulsa
-street: "East Admiral Place"
-housenumber: 7878
+street: "West 23rd Street"
+housenumber: 1202
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
