--- a/data/cities/tulsa/quiktrip-19.yml
+++ b/data/cities/tulsa/quiktrip-19.yml
@@ -1,11 +1,11 @@
-id: 1002055415
+id: 965940813
 type: way
-latitude: 36.16417
-longitude: -95.79557
-postcode: "74116"
+latitude: 36.2204
+longitude: -95.95762
+postcode: "74110"
 city: Tulsa
-street: "East Skelly Drive"
-housenumber: 16141
-phone: ""
+street: "North Lewis Avenue"
+housenumber: 4545
+phone: "+1 918 425 1896"
 opening_hours: ""
 website: ""
