--- a/data/cities/muskogee/queen-city-co.yml
+++ b/data/cities/muskogee/queen-city-co.yml
@@ -7,5 +7,5 @@ city: Muskogee
 street: "N Main St"
 housenumber: 109
 phone: "+1 918-912-2367"
-opening_hours: "Tu-Fr:07:00-17:30, Sa: 10-17:30"
+opening_hours: "Tu-Fr 07:00-17:30, Sa: 10:00-17:30"
 website: "https://linktr.ee/queencityco"
