--- a/data/cities/oklahoma-city/mrs-coolz.yml
+++ b/data/cities/oklahoma-city/mrs-coolz.yml
@@ -7,5 +7,5 @@ city: Oklahoma City
 street: "South Western Avenue"
 housenumber: 7808
 phone: "405-616-7833"
-opening_hours: "Mon - Wed : 9:00AM to 9:00PM, Thur - Sat : 9:00AM to 10:00PM, Sun : 10:00AM to 9:00PM"
+opening_hours: "Mo-We 09:00-21:00; Th-Sa 09:00-22:00; Su 10:00-21:00"
 website: "https://mrscoolz.com"
