--- a/data/cities/tulsa/quiktrip-17.yml
+++ b/data/cities/tulsa/quiktrip-17.yml
@@ -1,11 +1,11 @@
-id: 819628622
+id: 742371764
 type: way
-latitude: 36.14862
-longitude: -95.85006
+latitude: 36.16013
+longitude: -95.88752
 postcode: ""
 city: Tulsa
-street: "East 11th Street"
-housenumber: 11315
+street: "East Admiral Place"
+housenumber: 7878
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
