--- a/data/cities/tulsa/quiktrip-18.yml
+++ b/data/cities/tulsa/quiktrip-18.yml
@@ -1,11 +1,11 @@
-id: 965940813
+id: 819628622
 type: way
-latitude: 36.2204
-longitude: -95.95762
-postcode: "74110"
+latitude: 36.14862
+longitude: -95.85006
+postcode: "74128"
 city: Tulsa
-street: "North Lewis Avenue"
-housenumber: 4545
-phone: "+1 918 425 1896"
-opening_hours: ""
+street: "East 11th Street"
+housenumber: 11315
+phone: ""
+opening_hours: "24/7"
 website: ""
