--- a/data/cities/tulsa/super-nails.yml
+++ b/data/cities/tulsa/super-nails.yml
@@ -4,7 +4,7 @@ latitude: 36.05953
 longitude: -95.85151
 postcode: "74133"
 city: Tulsa
-street: "East 71 Street"
+street: "East 71st Street"
 housenumber: 11234
 phone: "+1-918-249-1662"
 opening_hours: "Mo-Sa 09:00-21:00; We 09:30-21:00; Su 11:30-19:00"
