--- a/data/cities/antlers/the-diamond-mine.yml
+++ b/data/cities/antlers/the-diamond-mine.yml
@@ -1,11 +1,11 @@
 id: 9844921585
 type: node
-latitude: 34.23161
-longitude: -95.60776
+latitude: 34.23159
+longitude: -95.60775
 postcode: "74523"
 city: Antlers
 street: "East Main Street"
 housenumber: 1001
-phone: ""
+phone: "(580)298-3649"
 opening_hours: ""
 website: ""
