update content and data

--- a/data/cities/lindsay/walmart.yml
+++ b/data/cities/lindsay/walmart.yml
@@ -1,11 +1,11 @@
-id: 5315594671
-type: node
-latitude: 34.83499
-longitude: -97.59746
+id: 1076914168
+type: way
+latitude: 34.83527
+longitude: -97.59775
 postcode: "73052"
 city: Lindsay
 street: "Linwood Plaza"
 housenumber: 401
-phone: "+1-405-756-9535"
-opening_hours: "Mo-Sa 07:00-21:00;Su 08:00-20:00"
-website: "https://www.walmart.com/store/893/lindsay-ok/whats-new"
+phone: ""
+opening_hours: "06:00-20:00"
+website: ""
