--- a/data/cities/antlers/family-dollar.yml
+++ b/data/cities/antlers/family-dollar.yml
@@ -4,7 +4,7 @@ latitude: 34.22942
 longitude: -95.6247
 postcode: "74523"
 city: Antlers
-street: "SW C"
+street: "West C Street"
 housenumber: 200
 phone: "+1 580 298 5128"
 opening_hours: "08:00-22:00"
