--- a/data/cities/miami/jaguar-tires.yml
+++ b/data/cities/miami/jaguar-tires.yml
@@ -4,8 +4,8 @@ latitude: 36.87131
 longitude: -94.86362
 postcode: "74354"
 city: Miami
-street: "1407 E Steve Owens Blvd"
+street: "East Steve Owens Boulevard"
 housenumber: 
 phone: "918-544-8044"
-opening_hours: "Mon-Fri: 8:00AM to 5:30PM, Sat: 8:00AM to 3:00PM"
+opening_hours: "Mo-Fr 08:00-17:30, Sa 08:00-15:00"
 website: "https://jaguar-tires.com"
