update content and data

--- a/data/cities/tulsa/boulevard-liquor-store.yml
+++ b/data/cities/tulsa/boulevard-liquor-store.yml
@@ -1,7 +1,7 @@
-id: 7391343266
-type: node
+id: 1082777197
+type: way
 latitude: 36.13728
-longitude: -96.00651
+longitude: -96.00658
 postcode: "74107"
 city: Tulsa
 street: "Southwest Boulevard"
