--- a/data/cities/tulsa/tulsa-food-mart.yml
+++ b/data/cities/tulsa/tulsa-food-mart.yml
@@ -1,7 +1,7 @@
-id: 7391343265
-type: node
-latitude: 36.13741
-longitude: -96.00652
+id: 790619647
+type: way
+latitude: 36.13728
+longitude: -96.00658
 postcode: "74107"
 city: Tulsa
 street: "Southwest Boulevard"
