update content and data

--- a/data/cities/oklahoma-city/7-eleven-2.yml
+++ b/data/cities/oklahoma-city/7-eleven-2.yml
@@ -1,11 +1,11 @@
-id: 788033482
+id: 228166873
 type: way
-latitude: 35.39658
-longitude: -97.56636
-postcode: "73159"
+latitude: 35.53039
+longitude: -97.57425
+postcode: ""
 city: Oklahoma City
-street: "South May Avenue"
-housenumber: 6809
+street: "Northwest Expressway"
+housenumber: 3245
 phone: ""
 opening_hours: ""
 website: ""
