--- a/data/cities/oklahoma-city/autozone.yml
+++ b/data/cities/oklahoma-city/autozone.yml
@@ -1,11 +1,11 @@
-id: 499271707
+id: 229089804
 type: way
-latitude: 35.42136
-longitude: -97.44027
-postcode: "73115"
+latitude: 35.5368
+longitude: -97.56432
+postcode: ""
 city: Oklahoma City
-street: "Southeast 44th Street"
-housenumber: 4321
+street: "North May Avenue"
+housenumber: 6408
 phone: ""
 opening_hours: ""
 website: ""
