--- a/data/cities/oklahoma-city/braums-3.yml
+++ b/data/cities/oklahoma-city/braums-3.yml
@@ -1,11 +1,11 @@
-id: 788054120
+id: 480304234
 type: way
-latitude: 35.39356
-longitude: -97.50694
-postcode: "73149"
+latitude: 35.612
+longitude: -97.6216
+postcode: "73142"
 city: Oklahoma City
-street: "South Shields Boulevard"
-housenumber: 7300
+street: "North MacArthur Boulevard"
+housenumber: 13925
 phone: ""
 opening_hours: ""
 website: ""
