--- a/data/cities/oklahoma-city/dollar-tree.yml
+++ b/data/cities/oklahoma-city/dollar-tree.yml
@@ -1,11 +1,11 @@
-id: 464029623
-type: way
-latitude: 35.5851
-longitude: -97.5664
+id: 7829952397
+type: node
+latitude: 35.58131
+longitude: -97.56537
 postcode: ""
 city: Oklahoma City
 street: "North May Avenue"
-housenumber: 11224
+housenumber: 10908
 phone: ""
 opening_hours: ""
 website: ""
