--- a/data/cities/oklahoma-city/n-style-salon-and-spa.yml
+++ b/data/cities/oklahoma-city/n-style-salon-and-spa.yml
@@ -1,11 +1,11 @@
-id: 464640887
+id: 464640913
 type: way
-latitude: 35.60366
-longitude: -97.54907
-postcode: "77706"
+latitude: 35.60559
+longitude: -97.54877
+postcode: ""
 city: Oklahoma City
 street: "North Pennsylvania Avenue"
-housenumber: 13140
+housenumber: 13320
 phone: ""
 opening_hours: ""
 website: ""
