--- a/data/cities/norman/q1-massage.yml
+++ b/data/cities/norman/q1-massage.yml
@@ -1,11 +1,11 @@
 id: 8653289317
 type: node
-latitude: 35.21674
-longitude: -97.42484
+latitude: 35.21664
+longitude: -97.42485
 postcode: "73071"
 city: Norman
-street: "1000 Alameda, Ste 138A,"
-housenumber: 
+street: "East Alameda Street"
+housenumber: 1000
 phone: "(405) 757-2115"
 opening_hours: ""
 website: "https://q1massagenorman.com"
