--- a/data/cities/tulsa/overstock-furniture-and-mattress.yml
+++ b/data/cities/tulsa/overstock-furniture-and-mattress.yml
@@ -1,11 +1,11 @@
-id: 296786322
+id: 580968051
 type: way
-latitude: 36.13431
-longitude: -95.92213
-postcode: ""
+latitude: 36.13444
+longitude: -95.92035
+postcode: "74112"
 city: Tulsa
 street: "South Yale Avenue"
-housenumber: 1955
+housenumber: 1901
 phone: ""
 opening_hours: ""
 website: ""
