--- a/data/cities/tulsa/reasors.yml
+++ b/data/cities/tulsa/reasors.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Yale Avenue"
 housenumber: 1885
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 07:00-23:00"
 website: ""
