update content and data

--- a/data/cities/woodward/t-rex-enterprises-llc.yml
+++ b/data/cities/woodward/t-rex-enterprises-llc.yml
@@ -1,11 +1,11 @@
-id: 8090228742
-type: node
-latitude: 36.40532
-longitude: -99.36222
+id: 1092162035
+type: way
+latitude: 36.40529
+longitude: -99.36232
 postcode: "73801"
 city: Woodward
 street: "East Hanks Trail"
 housenumber: 1522
-phone: "580 216 0958"
-opening_hours: "Mo-Sa 13:00-19:00"
+phone: "+1 580 216 0958"
+opening_hours: "Mo-Fr 10:00-18:00"
 website: "http://www.trexenterprisesllc.com"
