--- a/data/cities/tulsa/fedex-office-4.yml
+++ b/data/cities/tulsa/fedex-office-4.yml
@@ -1,11 +1,11 @@
-id: 185737984
+id: 1060121347
 type: way
-latitude: 36.14736
-longitude: -95.94807
-postcode: "74104"
+latitude: 36.07404
+longitude: -95.88565
+postcode: ""
 city: Tulsa
-street: "East 11th Street"
-housenumber: 2828
+street: "East 61st Street"
+housenumber: 8228
 phone: ""
-opening_hours: "Mo-Fr 07:00-23:00; Sa,Su 08:00-21:00"
+opening_hours: "24/7"
 website: ""
