--- a/data/cities/tulsa/fedex-office-5.yml
+++ b/data/cities/tulsa/fedex-office-5.yml
@@ -1,11 +1,11 @@
-id: 1060121347
+id: 1092159729
 type: way
-latitude: 36.07404
-longitude: -95.88565
-postcode: ""
+latitude: 36.10497
+longitude: -95.92349
+postcode: "74135"
 city: Tulsa
-street: "East 61st Street"
-housenumber: 8228
+street: "South Yale Avenue"
+housenumber: 4041
 phone: ""
-opening_hours: "24/7"
+opening_hours: "Mo-Fr 07:00-23:00; Sa,Su 09:00-21:00"
 website: ""
