update content and data

--- a/data/cities/grove/lakeland-petroleum-cpp-grove.yml
+++ b/data/cities/grove/lakeland-petroleum-cpp-grove.yml
@@ -7,5 +7,5 @@ city: Grove
 street: "East 290 Road"
 housenumber: 65501
 phone: "+19187866442"
-opening_hours: "Mo-Fri 07:30-16:00"
+opening_hours: "Mo-Fr 07:30-16:00"
 website: ""
