--- a/data/cities/grove/u-haul.yml
+++ b/data/cities/grove/u-haul.yml
@@ -7,5 +7,5 @@ city: Grove
 street: "East 290 Road"
 housenumber: 65252
 phone: "+19187865546"
-opening_hours: "Mo-Fri 08:30-16:30"
+opening_hours: "Mo-Fr 08:30-16:30"
 website: ""
