--- a/data/cities/tulsa/fedex-office-3.yml
+++ b/data/cities/tulsa/fedex-office-3.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "East 11th Street"
 housenumber: 2828
 phone: ""
-opening_hours: "Mo-Fr 07:00-23:00; Sa,Su 08:00-21:00"
+opening_hours: "Mo-Fr 08:00-20:00; Sa 09:00-18:00; Su 12:00-18:00"
 website: ""
