--- a/data/cities/tulsa/tas.yml
+++ b/data/cities/tulsa/tas.yml
@@ -4,7 +4,7 @@ latitude: 36.15149
 longitude: -95.96404
 postcode: ""
 city: Tulsa
-street: ""
+street: "South Wheeling Avenue"
 housenumber: 703
 phone: ""
 opening_hours: ""
