update content and data

--- a/data/cities/oklahoma-city/7-eleven-3.yml
+++ b/data/cities/oklahoma-city/7-eleven-3.yml
@@ -1,11 +1,11 @@
-id: 464029662
+id: 366025313
 type: way
-latitude: 35.58086
-longitude: -97.56797
-postcode: ""
+latitude: 35.37795
+longitude: -97.42301
+postcode: "73135"
 city: Oklahoma City
-street: "North May Avenue"
-housenumber: 10901
+street: "South Sooner Road"
+housenumber: 8930
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
