--- a/data/cities/oklahoma-city/7-eleven-4.yml
+++ b/data/cities/oklahoma-city/7-eleven-4.yml
@@ -1,11 +1,11 @@
-id: 578679693
+id: 464029662
 type: way
-latitude: 35.59426
-longitude: -97.56836
+latitude: 35.58086
+longitude: -97.56797
 postcode: ""
 city: Oklahoma City
-street: "Northwest 122nd Street"
-housenumber: 2912
+street: "North May Avenue"
+housenumber: 10901
 phone: ""
 opening_hours: ""
 website: ""
