update content and data

--- a/data/cities/moore/walmart-supercenter.yml
+++ b/data/cities/moore/walmart-supercenter.yml
@@ -7,5 +7,5 @@ city: Moore
 street: "Southwest 19th Street"
 housenumber: 501
 phone: "+1-405-790-0021"
-opening_hours: "24/7"
+opening_hours: "6AM–11PM"
 website: "https://www.walmart.com/store/277-moore-ok"
