--- a/data/cities/moore/costco.yml
+++ b/data/cities/moore/costco.yml
@@ -7,5 +7,5 @@ city: Moore
 street: "South Telephone Road"
 housenumber: 2651
 phone: "+14053007661"
-opening_hours: ""
+opening_hours: "Mon-Fri 10AM–8:30PM  Sat 9:30AM–7PM Sun 10AM–6PM"
 website: "https://www.costco.com/warehouse-locations/moore-OK-1444.html?utm_term=KW&utm_campaign=Homepage&utm_medium=GMB&utm_source=Google&utm_content=Link"
