update content and data

--- a/data/cities/del-city/hair-extraordinaire.yml
+++ b/data/cities/del-city/hair-extraordinaire.yml
@@ -7,5 +7,5 @@ city: Del City
 street: "SE 29th St"
 housenumber: 4613
 phone: "+1-405-724-7970"
-opening_hours: "Monday-Saturday: 9:00AM to 7:00PM,Sunday: 12:00PM to 7:00PM"
+opening_hours: "Mo-Sa 09:00-19:00,Su 12:00-19:00"
 website: "https://thehairextraordinaire.com"
