--- a/data/cities/oklahoma-city/cycle-gear.yml
+++ b/data/cities/oklahoma-city/cycle-gear.yml
@@ -8,4 +8,4 @@ street: "Northwest Expressway"
 housenumber: 2717
 phone: "+1 405 842 0111"
 opening_hours: ""
-website: ""
+website: "https://www.cyclegear.com/stores/cycle-gear-oklahoma-city-oklahoma-store-34"
