update content and data

--- a/data/cities/tonkawa/pilot.yml
+++ b/data/cities/tonkawa/pilot.yml
@@ -1,7 +1,7 @@
-id: 5549851585
-type: node
-latitude: 36.69622
-longitude: -97.34924
+id: 859087889
+type: way
+latitude: 36.69631
+longitude: -97.34947
 postcode: "74653"
 city: Tonkawa
 street: "West South Avenue"
