--- a/data/cities/tulsa/securcare-self-storage-12.yml
+++ b/data/cities/tulsa/securcare-self-storage-12.yml
@@ -1,11 +1,11 @@
-id: 691102908
+id: 691102884
 type: way
-latitude: 36.08902
-longitude: -95.94619
-postcode: "74105"
+latitude: 36.0987
+longitude: -95.90388
+postcode: "74145"
 city: Tulsa
-street: "East 51st Street"
-housenumber: 2916
+street: "South Sheridan Road"
+housenumber: 4411
 phone: ""
 opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/2916-east-51st-street"
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/4411-south-sheridan-road"
