--- a/data/cities/tulsa/securcare-self-storage-13.yml
+++ b/data/cities/tulsa/securcare-self-storage-13.yml
@@ -1,11 +1,11 @@
-id: 691102941
+id: 691102908
 type: way
-latitude: 36.03063
-longitude: -95.90338
-postcode: "74133"
+latitude: 36.08902
+longitude: -95.94619
+postcode: "74105"
 city: Tulsa
-street: "South Sheridan Road"
-housenumber: 9135
+street: "East 51st Street"
+housenumber: 2916
 phone: ""
 opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/9135-south-sheridan-road"
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/2916-east-51st-street"
