--- a/data/cities/tulsa/securcare-self-storage-15.yml
+++ b/data/cities/tulsa/securcare-self-storage-15.yml
@@ -1,11 +1,11 @@
-id: 691103024
+id: 691102975
 type: way
-latitude: 36.06183
-longitude: -95.96974
+latitude: 36.07009
+longitude: -95.97613
 postcode: "74136"
 city: Tulsa
-street: "South Trenton Avenue"
-housenumber: 6834
+street: "South Peoria Avenue"
+housenumber: 6346
 phone: ""
 opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/6834-south-trenton-avenue"
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/6436-south-peoria-avenue"
