--- a/data/cities/tulsa/securcare-self-storage-16.yml
+++ b/data/cities/tulsa/securcare-self-storage-16.yml
@@ -1,11 +1,11 @@
-id: 691103106
+id: 691103024
 type: way
-latitude: 36.14194
-longitude: -95.90507
-postcode: "74112"
+latitude: 36.06183
+longitude: -95.96974
+postcode: "74136"
 city: Tulsa
-street: "South Sheridan Road"
-housenumber: 1434
+street: "South Trenton Avenue"
+housenumber: 6834
 phone: ""
 opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/1434-south-sheridan-road"
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/6834-south-trenton-avenue"
