--- a/data/cities/tulsa/securcare-self-storage-8.yml
+++ b/data/cities/tulsa/securcare-self-storage-8.yml
@@ -1,11 +1,11 @@
-id: 691102818
+id: 691102790
 type: way
-latitude: 36.10941
-longitude: -96.01063
-postcode: "74107"
+latitude: 36.11677
+longitude: -95.92293
+postcode: "74135"
 city: Tulsa
-street: "South Tacoma Avenue"
-housenumber: 3655
+street: "South Yale Avenue"
+housenumber: 3210
 phone: ""
-opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/3655-south-tacoma-avenue"
+opening_hours: ""
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/3210-south-yale-avenue"
