--- a/data/cities/tulsa/securcare-self-storage-9.yml
+++ b/data/cities/tulsa/securcare-self-storage-9.yml
@@ -1,11 +1,11 @@
-id: 691102824
+id: 691102818
 type: way
-latitude: 36.07837
-longitude: -95.86824
-postcode: "74146"
+latitude: 36.10941
+longitude: -96.01063
+postcode: "74107"
 city: Tulsa
-street: "South Mingo Road"
-housenumber: 5815
+street: "South Tacoma Avenue"
+housenumber: 3655
 phone: ""
-opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Th off; Sa 10:00-13:00,14:00-17:00"
-website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/5815-south-mingo-road"
+opening_hours: "Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00"
+website: "https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/3655-south-tacoma-avenue"
