update content and data

--- a/data/cities/oklahoma-city/lowes.yml
+++ b/data/cities/oklahoma-city/lowes.yml
@@ -1,11 +1,11 @@
-id: 238022252
+id: 228169576
 type: way
-latitude: 35.60722
-longitude: -97.55569
-postcode: "73134"
+latitude: 35.50954
+longitude: -97.56715
+postcode: "73112"
 city: Oklahoma City
-street: "West Memorial Road"
-housenumber: 2400
+street: "North May Avenue"
+housenumber: 3801
 phone: ""
 opening_hours: ""
 website: ""
