--- a/data/cities/tulsa/quiktrip-east-pine-street-2.yml
+++ b/data/cities/tulsa/quiktrip-east-pine-street-2.yml
@@ -1,11 +1,11 @@
-id: 229816031
+id: 220670671
 type: way
-latitude: 36.17784
-longitude: -95.97489
-postcode: ""
+latitude: 36.17774
+longitude: -95.86973
+postcode: "74115"
 city: Tulsa
 street: "East Pine Street"
-housenumber: 1313
+housenumber: 9621
 phone: ""
 opening_hours: "24/7"
 website: ""
