update content and data

--- a/data/cities/stillwater/on-cue-west-6th-avenue.yml
+++ b/data/cities/stillwater/on-cue-west-6th-avenue.yml
@@ -1,11 +1,11 @@
-id: 257717161
+id: 369900549
 type: way
-latitude: 36.11546
-longitude: -97.08899
+latitude: 36.11687
+longitude: -97.12367
 postcode: "74074"
 city: Stillwater
 street: "West 6th Avenue"
-housenumber: 2401
-phone: "+1-405-372-8085"
+housenumber: 
+phone: ""
 opening_hours: ""
 website: ""
