--- a/data/cities/oklahoma-city/aldi.yml
+++ b/data/cities/oklahoma-city/aldi.yml
@@ -1,11 +1,11 @@
-id: 8627358214
+id: 8627322858
 type: node
-latitude: 35.51987
-longitude: -97.56658
-postcode: "73112"
+latitude: 35.55893
+longitude: -97.63723
+postcode: "73132"
 city: Oklahoma City
-street: "North May Avenue"
-housenumber: 4805
-phone: "+1 833 747 5095"
+street: "Northwest Expressway"
+housenumber: 6965
+phone: "+1 844 475 1011"
 opening_hours: "Mo, We, Fr-Su 09:00-21:00, Tu, Th 08:30-21:00"
 website: "https://www.aldi.us/"
