--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,11 +1,11 @@
-id: 238019833
+id: 244646802
 type: way
-latitude: 35.60957
-longitude: -97.5331
+latitude: 35.53431
+longitude: -97.56532
 postcode: ""
 city: Oklahoma City
-street: "West Memorial Road"
-housenumber: 1129
+street: ""
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
