--- a/data/cities/stillwater/on-cue.yml
+++ b/data/cities/stillwater/on-cue.yml
@@ -1,11 +1,11 @@
-id: 369900549
+id: 260550454
 type: way
-latitude: 36.11687
-longitude: -97.12367
-postcode: "74074"
+latitude: 36.17431
+longitude: -97.07027
+postcode: "74075"
 city: Stillwater
-street: "West 6th Avenue"
-housenumber: 
+street: "North Washington Street"
+housenumber: 5000
 phone: ""
 opening_hours: ""
 website: ""
