--- a/data/cities/the-village/walmart-neighborhood-market.yml
+++ b/data/cities/the-village/walmart-neighborhood-market.yml
@@ -1,11 +1,11 @@
-id: 5315597736
-type: node
-latitude: 35.56502
-longitude: -97.54759
+id: 193072366
+type: way
+latitude: 35.56534
+longitude: -97.54785
 postcode: "73120"
 city: The Village
 street: "North Pennsylvania Place"
 housenumber: 9320
-phone: "+1-405-840-8435"
+phone: "+1 405 840 8435"
 opening_hours: "Mo-Su 06:00-24:00"
 website: "https://www.walmart.com/store/5286/the-village-ok/whats-new"
