--- a/data/cities/tulsa/hibdon-tires-plus.yml
+++ b/data/cities/tulsa/hibdon-tires-plus.yml
@@ -1,11 +1,11 @@
-id: 203839918
+id: 180521658
 type: way
-latitude: 36.16235
-longitude: -95.90213
-postcode: "74115"
+latitude: 36.04994
+longitude: -96.00598
+postcode: "74132"
 city: Tulsa
-street: "North 67th East Avenue"
-housenumber: 33
+street: "South Olympia Avenue"
+housenumber: 7816
 phone: ""
 opening_hours: ""
 website: ""
