update content and data

--- a/data/cities/oklahoma-city/appliance-repair-by-asurion.yml
+++ b/data/cities/oklahoma-city/appliance-repair-by-asurion.yml
@@ -7,5 +7,5 @@ city: Oklahoma City
 street: "N Pennsylvania Ave, Suite B"
 housenumber: 14221
 phone: "580-476-5699"
-opening_hours: "Mon- Sun: 9:00 AM -10:00 PM"
+opening_hours: "Mo-Su 09:00-22:00"
 website: ""
