--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,8 +1,8 @@
-id: 244646802
+id: 284249016
 type: way
-latitude: 35.53431
-longitude: -97.56532
-postcode: ""
+latitude: 35.51183
+longitude: -97.59292
+postcode: "73112"
 city: Oklahoma City
 street: ""
 housenumber: 
