--- a/data/cities/stillwater/oncue-west-6th-avenue.yml
+++ b/data/cities/stillwater/oncue-west-6th-avenue.yml
@@ -1,11 +1,11 @@
-id: 198275256
+id: 260383307
 type: way
 latitude: 36.11556
-longitude: -97.05099
+longitude: -97.08984
 postcode: "74074"
 city: Stillwater
-street: ""
-housenumber: 
+street: "West 6th Avenue"
+housenumber: 2421
 phone: ""
 opening_hours: ""
 website: ""
