--- a/data/cities/stillwater/oncue.yml
+++ b/data/cities/stillwater/oncue.yml
@@ -1,11 +1,11 @@
-id: 260383307
+id: 209320278
 type: way
-latitude: 36.11556
-longitude: -97.08984
-postcode: "74074"
+latitude: 36.13029
+longitude: -97.0597
+postcode: "74075"
 city: Stillwater
-street: "West 6th Avenue"
-housenumber: 2421
+street: "North Main Street"
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
