--- a/data/cities/tulsa/hawley-design.yml
+++ b/data/cities/tulsa/hawley-design.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: "South Lewis Avenue"
 housenumber: 710
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 10:00-17:30; Sa 10:00-16:00"
 website: ""
