update content and data

--- a/data/cities/norman/buchanan-bicycles.yml
+++ b/data/cities/norman/buchanan-bicycles.yml
@@ -7,5 +7,5 @@ city: Norman
 street: "Buchanan Avenue"
 housenumber: 561
 phone: ""
-opening_hours: "Mo-Fr 10:00-18:00; Sa 10:00-16:00; PH Off"
+opening_hours: "Mo-Fr 10:00-18:00; Sa 10:00-16:00; PH off"
 website: "http://www.buchananbikes.com/"
