--- a/data/cities/stillwater/agri-center.yml
+++ b/data/cities/stillwater/agri-center.yml
@@ -7,5 +7,5 @@ city: Stillwater
 street: "East 6th Avenue"
 housenumber: 502
 phone: "+1-405-372-2766"
-opening_hours: "Mo-Fr 7:30-18:00; Sat 7:30-17:00"
+opening_hours: "Mo-Fr 07:30-18:00; Sa 07:30-17:00"
 website: ""
