--- a/data/cities/stillwater/asian-massage-spa.yml
+++ b/data/cities/stillwater/asian-massage-spa.yml
@@ -7,5 +7,5 @@ city: Stillwater
 street: "South Perkins Road"
 housenumber: 219
 phone: "+1-405-762-3078"
-opening_hours: "Sun-Sat 9:00-22:00"
+opening_hours: "Su-Sa 09:00-22:00"
 website: "https://219-s-perkins-rd.business.site/"
