--- a/data/cities/stillwater/clear-value-eyewear.yml
+++ b/data/cities/stillwater/clear-value-eyewear.yml
@@ -7,5 +7,5 @@ city: Stillwater
 street: "South Perkins Road"
 housenumber: 205
 phone: "+1-405-743-0360"
-opening_hours: "Mo,Fr 10:00-17:00; Tu,Th 10:00-18:00; Wed,Sat 10:00-14:00"
+opening_hours: "Mo,Fr 10:00-17:00; Tu,Th 10:00-18:00; We,Sa 10:00-14:00"
 website: ""
