--- a/data/cities/tulsa/ashley-homestore.yml
+++ b/data/cities/tulsa/ashley-homestore.yml
@@ -1,11 +1,11 @@
-id: 556645858
+id: 499995906
 type: way
-latitude: 36.04957
-longitude: -96.00455
-postcode: "74132"
+latitude: 36.06136
+longitude: -95.87645
+postcode: "74133"
 city: Tulsa
-street: "South Olympia Avenue"
-housenumber: 7831
+street: "East 71st Street"
+housenumber: 9027
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-21:00; Su 11:00-19:00"
 website: ""
