--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,8 +1,8 @@
-id: 284249016
+id: 244646802
 type: way
-latitude: 35.51183
-longitude: -97.59292
-postcode: "73112"
+latitude: 35.53431
+longitude: -97.56532
+postcode: ""
 city: Oklahoma City
 street: ""
 housenumber: 
