--- a/data/cities/stillwater/stilly-axe-pit.yml
+++ b/data/cities/stillwater/stilly-axe-pit.yml
@@ -7,5 +7,5 @@ city: Stillwater
 street: "South Main Street"
 housenumber: 1020
 phone: "+1-405-332-5463"
-opening_hours: "Mo-Th 16:00-22:00; Fr 16:00-23:00; Sat 12:00-23:00; Sun 12:00-20:00"
+opening_hours: "Mo-Th 16:00-22:00; Fr 16:00-23:00; Sa 12:00-23:00; Su 12:00-20:00"
 website: "https://stillyaxepit.com/"
